--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 application.name=Belajar Spring Boot
 application.version=1
 application.production-mode=false
+
+application.database.username=farhan
+application.database.password=rahasia
+application.database.database=belajar
+application.database.url=jdbc:contoh
+
+spring.profiles.active=local
+
+profile.default=Default
